--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,20 @@ a.nav-link {
   color: #fff;
 }
 
+.owl-dots {
+  padding: 15px;
+}
+
+.skillsSection p {
+  font-weight: 700;
+}
+
+.skillsSection .title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
 .skill {
   text-align: center;
   margin-left: 10px;
@@ -192,7 +206,10 @@ a.nav-link {
 }
 
 /* Stats Section */
-
+.statsSection {
+  padding: 50px 0;
+}
+/* 
 .squareItem {
   margin-top: 30px;
   position: relative;
@@ -245,7 +262,7 @@ a.nav-link {
   font-size: 45px;
   margin-left: -20%;
   color: #444;
-}
+} */
 
 /* Contact Section */
 
