--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 h2,
 h4 {
   font-weight: 700;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 h4 {
@@ -42,7 +42,7 @@ h4 {
 }
 
 /* Slides Section */
-.overlay {
+/* .overlay {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -74,67 +74,90 @@ h4 {
 .slides-navigation a.next {
   background-image: url(../img/icons/forward.png);
   right: -50px;
-}
+} */
 
-.titleMessage {
+/* .titleMessage {
   position: absolute;
   width: 100%;
   height: 250px;
   top: 35%;
   z-index: 5;
   text-align: center;
-}
+} */
 
-.titleMessage .heading p {
-  color: #fff;
-  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
-  margin-bottom: 0.5rem;
+.titleMessage .heading {
+  color: #46b4eb;
+  /* text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); */
+  /* margin-bottom: 0.5rem; */
   font-weight: 700;
-  font-style: italic;
 }
 
 .titleMessage .heading .main {
   font-size: 80px;
   line-height: 1;
   letter-spacing: 1px;
+  text-align: left;
 }
 
 .titleMessage .heading .sub {
-  font-size: 3rem;
+  font-size: 2.5rem;
+  text-align: left;
 }
 
-.titleMessage img {
+.titleMessage .heading h4 {
+  color: #46b4eb;
+  font-weight: 700;
+  text-align: left;
+  font-style: normal;
+}
+
+.titleMessage .heading p {
+  color: #46b4eb;
+  font-weight: 700;
+  text-align: left;
+}
+
+.titleMessage .heading ul {
+  color: #46b4eb;
+  font-weight: 700;
+  text-align: left;
+}
+
+/* .titleMessage img {
   height: 125px;
 }
 
 .titleMessage .heading .quote {
   font-size: 3rem;
-}
+} */
 
 /* Navigation Bar */
-a.nav-link img {
+/* a.nav-link img {
   height: 70px;
   padding: 0;
-}
+} */
 
 #navigation {
   background-color: #46b4eb;
-  padding: 20px 10px;
+  padding: 30px 10px;
   z-index: 100;
   width: 100%;
-  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.2); */
   font-size: 1.2rem;
   font-weight: 700;
-  font-style: italic;
+  /* font-style: italic; */
+  position: fixed;
+  /* top: 0; */
+  align-content: center;
 }
 
 #navigation li {
   padding: 0 10px;
 }
 
-a.nav-link.logo {
+/* a.nav-link.logo {
   padding: 0px;
-}
+} */
 
 a.nav-link {
   color: #fff;
@@ -145,11 +168,6 @@ a.nav-link {
 .navbar-toggler-icon {
   background-image: url(../img/icons/menu.png);
   background-size: 100%;
-}
-
-.fixedNav #navigation {
-  position: fixed;
-  top: 0;
 }
 
 /* About Section */
@@ -168,21 +186,21 @@ a.nav-link {
 }
 
 /* Certification section */
-/* .certSection {
+.certSection {
   background-color: #46b4eb;
   color: #fff;
 }
 
 .cert_list ul li a {
   color: #fff;
-} */
+}
 
 /* Skills Section */
 
 /* https://flatuicolors.com/ */
 .skillsSection {
-  background-color: #46b4eb;
-  color: #fff
+  background-color: #fff;
+  color: #46b4eb
 }
 
 .owl-carousel {
@@ -304,15 +322,16 @@ div.owl-dots {
 
 /* Contact Section */
 .contactSection {
-  color: #46b4eb;
+  background-color: #46b4eb;
+  color: #fff;
 }
 
 .contactButton {
-  color: #46b4eb;
+  color: #fff;
   padding: 15px 20px;
   display: inline-block;
   margin: 20px 10px 0px;
-  border: 1px solid #46b4eb;
+  border: 1px solid #fff;
   border-radius: 2px;
   font-weight: 700;
   font-style: italic;
@@ -320,8 +339,8 @@ div.owl-dots {
 
 .contactButton:hover {
   text-decoration: none;
-  color: #fff;
-  background-color: #46b4eb;
+  color: #46b4eb;
+  background-color: #fff;
 }
 
 /* Portfolio Section */
@@ -499,7 +518,7 @@ ul.items p {
   opacity: 0.5;
   padding-top: 10px;
   font-weight: 700;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 .icon {
