--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ h4 {
   font-weight: 700;
   /* font-style: italic; */
   position: fixed;
-  /* top: 0; */
+  top: 0;
   align-content: center;
 }
 
