--- a/css/style.css
+++ b/css/style.css
@@ -41,50 +41,6 @@ h4 {
   padding: 150px 0;
 }
 
-/* Slides Section */
-/* .overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 3;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.slides-navigation {
-  z-index: 6;
-  width: 50%;
-  height: 50px;
-  left: 25%;
-  top: 100%;
-}
-
-.slides-navigation .prev,
-.slides-navigation .next {
-  width: 30px;
-  height: 30px;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.slides-navigation a.prev {
-  background-image: url(../img/icons/back.png);
-  left: -50px;
-}
-
-.slides-navigation a.next {
-  background-image: url(../img/icons/forward.png);
-  right: -50px;
-} */
-
-/* .titleMessage {
-  position: absolute;
-  width: 100%;
-  height: 250px;
-  top: 35%;
-  z-index: 5;
-  text-align: center;
-} */
-
 .titleMessage .heading {
   color: #46b4eb;
   /* text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); */
@@ -223,106 +179,21 @@ div.owl-dots {
 
 .skill {
   text-align: center;
-  margin-left: 10px;
 }
 
 .skill_image {
   align-items: center;
-  height: 65px;
-  width: 65px;
-}
-
-/* .chart {
-  position: relative;
-  width: 152px;
-  height: 152px;
-  display: inline-block;
-  text-align: center;
-}
-
-.chart canvas {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.chart .percent {
-  color: #fff;
-  line-height: 152px;
-  display: inline-block;
-  font-size: 2.5rem;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.chart .percent:after {
-  content: "%";
-  font-weight: 700;
-  font-style: italic;
-} */
-
-/* Stats Section */
-/* .statsSection {
-  padding: 50px 0;
-} */
-/* 
-.squareItem {
-  margin-top: 30px;
-  position: relative;
-}
-
-.squareInnerContainer {
-  position: relative;
-  padding: 50px 15px 35px;
-  text-align: center;
-  border: 2px solid #444;
-  border-top: none;
-}
-
-.squareInnerContainer:before,
-.squareInnerContainer:after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  width: 30%;
-  border-bottom: 3px solid #444;
-}
-
-.squareInnerContainer:before {
-  right: 0px;
-}
-
-.squareInnerContainer:after {
-  left: 0px;
-}
-
-.squareContent .counter {
-  font-size: 56px;
-  margin-bottom: 10px;
-  color: #46b4eb;
-}
-
-.squareContent p {
-  font-size: 13px;
-  font-weight: 700;
-  font-style: italic;
-  margin: 0;
-}
-
-.squareIcon {
-  position: absolute;
-  left: 50%;
-  top: -30px;
-  width: 40%;
   height: 60px;
-  font-size: 45px;
-  margin-left: -20%;
-  color: #444;
-} */
+  width: 60px;
+}
 
 /* Contact Section */
 .contactSection {
   background-color: #46b4eb;
+  color: #fff;
+}
+
+.contactSection h2 {
   color: #fff;
 }
 
@@ -405,7 +276,6 @@ div.owl-dots {
 }
 
 .items li img {
-  width: 100%;
   -webkit-transition: all 0.2s linear, 1s;
   -moz-transition: all 0.2s linear, 1s;
   -o-transition: all 0.2s linear, 1s;
